overflow navbar fix, custom scrollbar styles

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,32 @@
     }
 }
 
+html {
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
 body {
-    height: 100vh;
-    overflow-y: hidden;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .content {
     height: 100vh;
+}
+
+::-webkit-scrollbar-track {
+    background: #333;
+  }
+::-webkit-scrollbar {
+width: 7px;
+}
+::-webkit-scrollbar-thumb {
+background: #666;
+}
+::-webkit-scrollbar-thumb:hover {
+background: #888;
 }
