--- a/src/components/SideMenu/SideMenu.css
+++ b/src/components/SideMenu/SideMenu.css
@@ -1,8 +1,10 @@
+
 .side-menu {
     position: fixed;
     background: #000;
     width: 250px;
-    height: 100%;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     box-sizing: border-box;
     padding: 30px 20px;
     transition: width .2s ease-in;
@@ -72,12 +74,53 @@
     background-color: #333;
 }
 
-.side-menu .main-menu {
-    height: 75%;
+.side-menu-footer  {
+    width: 100%;
+    background: #333;
+    position: absolute;
+    bottom: 0;
+    left: 0; 
+    box-sizing: border-box;
+    white-space:nowrap;
+    overflow:hidden;
+} 
+
+
+@media screen and (max-height: 650px) {
+    .side-menu .main-menu {
+        height: 64%;
+    }
+    
+    .side-menu.inactive .main-menu {
+        height: 78%;    
+    }
+
+ 
 }
 
-.side-menu.inactive .main-menu {
-    height: 80%;    
+@media screen and (min-height: 651px) {
+    .side-menu .main-menu {
+        height: 75%;
+    }
+    
+    .side-menu.inactive .main-menu {
+        height: 83%;    
+    }
+
+}
+
+@media screen and (max-height: 799px) {
+    .side-menu-footer {
+        padding: 12px 18px;
+        height: 60px;
+    }
+}
+
+@media screen and (min-height: 800px) {
+    .side-menu-footer  {     
+        height: 100px;
+        padding: 25px 20px;
+    }
 }
 
 ul {
@@ -89,24 +132,11 @@ ul {
     white-space:nowrap;
     display: flex;
     flex-direction: column;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .main-menu ul > :last-child {
     margin-top: auto;
-}
-
-.side-menu-footer  {
-    width: 100%;
-    height: 100px;
-    background: #333;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    white-space:nowrap;
-    overflow:hidden;
 }
 
 .avatar {
